tests/syntax_error/missing_array_size_byte.jou
def foo(data: byte[]) -> int:  # Error: array length must be specified, e.g. int[10] instead of int[]
    pass
